--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TypeMath - #1 typing website/title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <title>TypeMath - #1 Best Typing Website for Math</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary: #ff5722;
-            --bg-dark: #0a0a0a;
-            --bg-card: #1a1a1a;
-            --text-primary: #ffffff;
-            --text-secondary: #a0a0a0;
-            --shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            --primary: #ff6b35;
+            --secondary: #00ddeb;
+            --bg-dark: #0d1117;
+            --card-bg: #161b22;
+            --text-light: #ffffff;
+            --text-muted: #8b949e;
+            --shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+            --gradient: linear-gradient(135deg, var(--primary), var(--secondary));
         }
 
         * {
@@ -22,154 +24,212 @@
         }
 
         body {
-            font-family: 'Inter', sans-serif;
-            background-color: var(--bg-dark);
-            color: var(--text-primary);
-            line-height: 1.6;
+            font-family: 'Poppins', sans-serif;
+            background: var(--bg-dark) url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="none"><path fill="rgba(255,107,53,0.05)" d="M50 0C22.4 0 0 22.4 0 50s22.4 50 50 50 50-22.4 50-50S77.6 0 50 0zm0 90C28.5 90 10 71.5 10 50S28.5 10 50 10s40 18.5 40 40-18.5 40-40 40z"/></svg>') repeat;
+            color: var(--text-light);
             min-height: 100vh;
             display: grid;
             grid-template-rows: auto 1fr auto;
+            overflow-x: hidden;
         }
 
         header {
-            background-color: var(--bg-card);
-            padding: 1.5rem;
-            box-shadow: var(--shadow);
+            background: var(--card-bg);
+            padding: 1.5rem 2rem;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            border-bottom: 1px solid rgba(255, 107, 53, 0.1);
         }
 
         nav {
-            max-width: 1200px;
+            max-width: 1400px;
             margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .logo {
+            font-size: 1.5rem;
+            font-weight: 700;
+            background: var(--gradient);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
         }
 
         nav ul {
             display: flex;
-            justify-content: center;
             list-style: none;
-            gap: 2rem;
+            gap: 2.5rem;
         }
 
         nav a {
-            color: var(--text-primary);
+            color: var(--text-light);
             text-decoration: none;
             font-weight: 600;
             padding: 0.5rem 1rem;
+            border-radius: 25px;
             transition: all 0.3s ease;
         }
 
         nav a:hover {
-            color: var(--primary);
-            transform: translateY(-2px);
+            background: var(--gradient);
+            transform: scale(1.05);
         }
 
         main {
-            max-width: 1200px;
+            max-width: 1400px;
             margin: 0 auto;
-            padding: 2rem;
+            padding: 3rem 2rem;
             display: flex;
-            align-items: center;
             justify-content: center;
+            align-items: center;
         }
 
         .typing-container {
-            background-color: var(--bg-card);
-            padding: 2rem;
-            border-radius: 1rem;
+            background: var(--card-bg);
+            padding: 2.5rem;
+            border-radius: 1.5rem;
             box-shadow: var(--shadow);
             width: 100%;
-            max-width: 800px;
+            max-width: 900px;
+            position: relative;
+            overflow: hidden;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 107, 53, 0.1);
+        }
+
+        .typing-container::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(255, 107, 53, 0.1) 0%, transparent 70%);
+            animation: rotate 20s linear infinite;
+            z-index: -1;
         }
 
         h1 {
             text-align: center;
-            margin-bottom: 2rem;
-            font-size: 2.5rem;
+            font-size: 2.8rem;
             font-weight: 700;
+            margin-bottom: 2rem;
+            background: var(--gradient);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
         }
 
         #typing-area {
-            background-color: #2a2a2a;
+            background: rgba(0, 0, 0, 0.2);
             border: 2px solid var(--primary);
-            border-radius: 0.5rem;
-            padding: 1.5rem;
-            font-size: 1.25rem;
-            min-height: 150px;
-            resize: none;
-            color: var(--text-primary);
+            border-radius: 1rem;
+            padding: 2rem;
+            font-size: 1.3rem;
+            min-height: 200px;
             width: 100%;
-            transition: border-color 0.3s ease;
+            color: var(--text-light);
+            resize: none;
+            transition: all 0.3s ease;
+            box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.2);
         }
 
         #typing-area:focus {
+            border-color: var(--secondary);
+            box-shadow: 0 0 15px rgba(0, 221, 235, 0.3);
             outline: none;
-            border-color: #ff8a65;
         }
 
         .progress-container {
-            margin: 1.5rem 0;
+            margin: 2rem 0;
+            position: relative;
         }
 
         #progress-bar {
-            height: 8px;
-            background-color: #333;
-            border-radius: 4px;
+            height: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 5px;
             overflow: hidden;
-            position: relative;
         }
 
         #progress-bar::after {
             content: '';
             position: absolute;
-            top: 0;
-            left: 0;
             height: 100%;
             width: 0;
-            background: linear-gradient(90deg, var(--primary), #ff8a65);
-            transition: width 0.3s ease;
+            background: var(--gradient);
+            border-radius: 5px;
+            transition: width 0.4s ease;
+            box-shadow: 0 0 15px rgba(255, 107, 53, 0.5);
         }
 
         .stats-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-            gap: 1.5rem;
-            margin-top: 1.5rem;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 2rem;
+            margin-top: 2rem;
         }
 
         .stat-item {
             text-align: center;
+            background: rgba(255, 107, 53, 0.05);
+            padding: 1rem;
+            border-radius: 1rem;
+            transition: transform 0.3s ease;
+        }
+
+        .stat-item:hover {
+            transform: translateY(-5px);
         }
 
         .stat-value {
-            color: var(--primary);
-            font-size: 1.5rem;
-            font-weight: 600;
+            font-size: 2rem;
+            font-weight: 700;
+            background: var(--gradient);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
         }
 
         .stat-label {
-            color: var(--text-secondary);
-            font-size: 0.9rem;
+            color: var(--text-muted);
+            font-size: 1rem;
         }
 
         footer {
-            background-color: var(--bg-card);
-            padding: 1rem;
+            background: var(--card-bg);
+            padding: 1.5rem;
             text-align: center;
-            color: var(--text-secondary);
-            font-size: 0.9rem;
+            color: var(--text-muted);
+            border-top: 1px solid rgba(255, 107, 53, 0.1);
+        }
+
+        @keyframes rotate {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
 
         @media (max-width: 768px) {
-            nav ul {
-                flex-wrap: wrap;
+            nav {
+                flex-direction: column;
                 gap: 1rem;
             }
 
-            .typing-container {
-                padding: 1rem;
+            nav ul {
+                flex-wrap: wrap;
+                justify-content: center;
             }
 
             h1 {
                 font-size: 2rem;
+            }
+
+            .typing-container {
+                padding: 1.5rem;
             }
         }
     </style>
@@ -177,6 +237,7 @@
 <body>
     <header>
         <nav>
+            <div class="logo">TypeMath</div>
             <ul>
                 <li><a href="#" aria-label="Home">Home</a></li>
                 <li><a href="#" aria-label="Practice">Practice</a></li>
@@ -190,14 +251,14 @@
     <main>
         <section class="typing-container">
             <h1>Welcome to TypeMath</h1>
-            <textarea id="typing-area" placeholder="Start typing here..." aria-label="Typing practice area"></textarea>
+            <textarea id="typing-area" placeholder="Type your math problems here..." aria-label="Math typing practice area"></textarea>
             <div class="progress-container">
                 <div id="progress-bar"></div>
             </div>
             <div class="stats-grid">
                 <div class="stat-item">
                     <span class="stat-value" id="speed">0</span>
-                    <span class="stat-label">WPM</span>
+                    <span class="stat-label">Words/Min</span>
                 </div>
                 <div class="stat-item">
                     <span class="stat-value" id="accuracy">0</span>
@@ -208,7 +269,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 TypeMath. All rights reserved.</p>
+        <p>© 2025 TypeMath - The #1 Math Typing Platform</p>
     </footer>
 
     <script src="script.js"></script>
