--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TypeMath - #1 Best Typing Website for Math</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
         :root {
             --primary: #ff6b35;
             --secondary: #00ddeb;
-            --bg-dark: #0d1117;
-            --card-bg: #161b22;
-            --text-light: #ffffff;
-            --text-muted: #8b949e;
-            --shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
-            --gradient: linear-gradient(135deg, var(--primary), var(--secondary));
+            --bg-dark: #0a0e17;
+            --card-bg: #141925;
+            --text-light: #f5f7fa;
+            --text-muted: #94a3b8;
+            --shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+            --gradient: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
         }
 
         * {
@@ -24,26 +24,27 @@
         }
 
         body {
-            font-family: 'Poppins', sans-serif;
-            background: var(--bg-dark) url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="none"><path fill="rgba(255,107,53,0.05)" d="M50 0C22.4 0 0 22.4 0 50s22.4 50 50 50 50-22.4 50-50S77.6 0 50 0zm0 90C28.5 90 10 71.5 10 50S28.5 10 50 10s40 18.5 40 40-18.5 40-40 40z"/></svg>') repeat;
+            font-family: 'Manrope', sans-serif;
+            background: var(--bg-dark);
             color: var(--text-light);
             min-height: 100vh;
             display: grid;
             grid-template-rows: auto 1fr auto;
+            line-height: 1.5;
             overflow-x: hidden;
         }
 
         header {
             background: var(--card-bg);
-            padding: 1.5rem 2rem;
+            padding: 1rem 2rem;
             position: sticky;
             top: 0;
             z-index: 1000;
-            border-bottom: 1px solid rgba(255, 107, 53, 0.1);
+            border-bottom: 1px solid rgba(255, 107, 53, 0.05);
         }
 
         nav {
-            max-width: 1400px;
+            max-width: 1440px;
             margin: 0 auto;
             display: flex;
             justify-content: space-between;
@@ -51,8 +52,8 @@
         }
 
         .logo {
-            font-size: 1.5rem;
-            font-weight: 700;
+            font-size: 1.75rem;
+            font-weight: 800;
             background: var(--gradient);
             -webkit-background-clip: text;
             background-clip: text;
@@ -62,27 +63,27 @@
         nav ul {
             display: flex;
             list-style: none;
-            gap: 2.5rem;
+            gap: 2rem;
         }
 
         nav a {
             color: var(--text-light);
             text-decoration: none;
             font-weight: 600;
-            padding: 0.5rem 1rem;
-            border-radius: 25px;
+            padding: 0.75rem 1.25rem;
+            border-radius: 50px;
             transition: all 0.3s ease;
         }
 
         nav a:hover {
             background: var(--gradient);
-            transform: scale(1.05);
+            color: var(--text-light);
         }
 
         main {
-            max-width: 1400px;
+            max-width: 1440px;
             margin: 0 auto;
-            padding: 3rem 2rem;
+            padding: 4rem 2rem;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -91,33 +92,19 @@
         .typing-container {
             background: var(--card-bg);
             padding: 2.5rem;
-            border-radius: 1.5rem;
+            border-radius: 1.25rem;
             box-shadow: var(--shadow);
             width: 100%;
             max-width: 900px;
             position: relative;
-            overflow: hidden;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 107, 53, 0.1);
-        }
-
-        .typing-container::before {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle, rgba(255, 107, 53, 0.1) 0%, transparent 70%);
-            animation: rotate 20s linear infinite;
-            z-index: -1;
+            border: 1px solid rgba(255, 107, 53, 0.05);
         }
 
         h1 {
             text-align: center;
-            font-size: 2.8rem;
-            font-weight: 700;
-            margin-bottom: 2rem;
+            font-size: 2.5rem;
+            font-weight: 800;
+            margin-bottom: 2.5rem;
             background: var(--gradient);
             -webkit-background-clip: text;
             background-clip: text;
@@ -125,35 +112,39 @@
         }
 
         #typing-area {
-            background: rgba(0, 0, 0, 0.2);
-            border: 2px solid var(--primary);
+            background: rgba(255, 255, 255, 0.03);
+            border: none;
             border-radius: 1rem;
-            padding: 2rem;
-            font-size: 1.3rem;
-            min-height: 200px;
+            padding: 1.75rem;
+            font-size: 1.2rem;
+            min-height: 180px;
             width: 100%;
             color: var(--text-light);
             resize: none;
             transition: all 0.3s ease;
-            box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: inset 0 4px 12px rgba(0, 0, 0, 0.1);
         }
 
         #typing-area:focus {
-            border-color: var(--secondary);
-            box-shadow: 0 0 15px rgba(0, 221, 235, 0.3);
             outline: none;
+            box-shadow: 0 0 20px rgba(255, 107, 53, 0.2), inset 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        #typing-area::placeholder {
+            color: var(--text-muted);
+            opacity: 0.7;
         }
 
         .progress-container {
             margin: 2rem 0;
-            position: relative;
         }
 
         #progress-bar {
-            height: 10px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 5px;
+            height: 6px;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 3px;
             overflow: hidden;
+            position: relative;
         }
 
         #progress-bar::after {
@@ -162,33 +153,34 @@
             height: 100%;
             width: 0;
             background: var(--gradient);
-            border-radius: 5px;
+            border-radius: 3px;
             transition: width 0.4s ease;
-            box-shadow: 0 0 15px rgba(255, 107, 53, 0.5);
+            box-shadow: 0 0 10px rgba(255, 107, 53, 0.3);
         }
 
         .stats-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+            gap: 1.5rem;
             margin-top: 2rem;
         }
 
         .stat-item {
             text-align: center;
-            background: rgba(255, 107, 53, 0.05);
             padding: 1rem;
             border-radius: 1rem;
-            transition: transform 0.3s ease;
+            background: rgba(255, 107, 53, 0.03);
+            transition: all 0.3s ease;
         }
 
         .stat-item:hover {
-            transform: translateY(-5px);
+            transform: translateY(-3px);
+            background: rgba(255, 107, 53, 0.05);
         }
 
         .stat-value {
             font-size: 2rem;
-            font-weight: 700;
+            font-weight: 800;
             background: var(--gradient);
             -webkit-background-clip: text;
             background-clip: text;
@@ -197,7 +189,8 @@
 
         .stat-label {
             color: var(--text-muted);
-            font-size: 1rem;
+            font-size: 0.95rem;
+            font-weight: 400;
         }
 
         footer {
@@ -205,31 +198,88 @@
             padding: 1.5rem;
             text-align: center;
             color: var(--text-muted);
-            border-top: 1px solid rgba(255, 107, 53, 0.1);
+            font-size: 0.9rem;
+            border-top: 1px solid rgba(255, 107, 53, 0.05);
         }
 
-        @keyframes rotate {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        /* Responsive Design */
+        @media (max-width: 1024px) {
+            main {
+                padding: 3rem 1.5rem;
+            }
+
+            .typing-container {
+                padding: 2rem;
+            }
+
+            h1 {
+                font-size: 2.25rem;
+            }
         }
 
         @media (max-width: 768px) {
+            header {
+                padding: 1rem;
+            }
+
             nav {
                 flex-direction: column;
-                gap: 1rem;
+                gap: 1.5rem;
             }
 
             nav ul {
                 flex-wrap: wrap;
                 justify-content: center;
+                gap: 1rem;
+            }
+
+            nav a {
+                padding: 0.5rem 1rem;
+            }
+
+            main {
+                padding: 2rem 1rem;
             }
 
             h1 {
                 font-size: 2rem;
             }
 
+            #typing-area {
+                font-size: 1.1rem;
+                min-height: 150px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .logo {
+                font-size: 1.5rem;
+            }
+
+            nav a {
+                padding: 0.5rem 0.75rem;
+            }
+
             .typing-container {
                 padding: 1.5rem;
+            }
+
+            h1 {
+                font-size: 1.75rem;
+                margin-bottom: 1.5rem;
+            }
+
+            #typing-area {
+                padding: 1.25rem;
+                font-size: 1rem;
+            }
+
+            .stat-value {
+                font-size: 1.75rem;
+            }
+
+            .stat-label {
+                font-size: 0.85rem;
             }
         }
     </style>
@@ -251,7 +301,7 @@
     <main>
         <section class="typing-container">
             <h1>Welcome to TypeMath</h1>
-            <textarea id="typing-area" placeholder="Type your math problems here..." aria-label="Math typing practice area"></textarea>
+            <textarea id="typing-area" placeholder="Start typing math problems..." aria-label="Math typing practice area"></textarea>
             <div class="progress-container">
                 <div id="progress-bar"></div>
             </div>
@@ -269,7 +319,7 @@
     </main>
 
     <footer>
-        <p>© 2025 TypeMath - The #1 Math Typing Platform</p>
+        <p>© 2025 TypeMath - Master Math Through Typing</p>
     </footer>
 
     <script src="script.js"></script>
